cluster/service/banana.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-service
  labels:
    app: banana
spec:
  nodeSelector:
    nodeNum: '3'
  containers:
    - name: banana-service
      image: hashicorp/http-echo
      args:
        - '-text=banana'

---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 8080
      targetPort: 5678
