cluster/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruit-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port:
                number: 8080
        - path: /banana
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port:
                number: 8080
        - path: /hello
          pathType: Prefix
          backend:
            service:
              name: hello-world
              port:
                number: 8080
        - path: /game
          pathType: Prefix
          backend:
            service:
              name: service-2048
              number: 80
